<resources>
    <string name="app_name">HaveBreak</string>
    <string name="action_reservations">Reservations</string>
    <string name="action_offers">Offers</string>
    <string name="action_reviews">Reviews</string>
    <string name="action_statistics">Statistics</string>
    <string name="restaurant_page_name">Restaurant Name</string>
    <string name="show_as">Show this page as a user</string>
    <string name="button_take_photo">Take Photo Now</string>
    <string name="button_choose_photo">Choose From Gallery</string>
    <string name="restaurant_name">Name:</string>
    <string name="restaurant_address">Address:</string>
    <string name="restaurant_telephone_number">Telephone: </string>
    <string name="edit_restaurant_name"> Insert name</string>
    <string name="edit_restaurant_address"> Insert address</string>
    <string name="edit_restaurant_telephone_number"> Insert tel</string>
    <string name="last_comments">Last comments preview</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_more">More</string>
    <string name="action_edit_cover">Edit Cover</string>
    <string name="action_edit">Edit Info</string>
    <string name="action_menu">Menu</string>
    <string name="action_save">Save</string>
    <string name="seating_capacity">Seating capacity</string>
    <string name="squared_metres">Squared meters</string>
    <string name="closest_metro_stop">Closest metro stop</string>
    <string name="closest_bus_stop">Closest bus stop</string>
    <string name="credit_card">Credit Card</string>
    <string name="tv">TV</string>
    <string name="wifi">WI-FI</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="take_away">TAKE-AWAY</string>
    <string name="mandatory_booking_via_telephone">Booking only via telephone</string>
    <string name="celiac">Celiac</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="bar">Bar</string>
    <string name="canteen">Canteen</string>
    <string name="fastfood">Fast-food</string>
    <string name="restaurant">Restaurant</string>
    <string name="title_activity_menu_restaurant_page">Menu</string>
    <string name="add_meal">Add a meal</string>
    <string name="availability">Sale</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_price">Meal Price</string>
    <string name="meal_image">Meal Photo</string>
    <string name="meal_description">Meal Description</string>
    <string name="meal_possible_additions">Meal Addition </string>
    <string name="meal_possible_categories">Meal Categories </string>
    <string name="meal_time_for_cooking">Cooking</string>
    <string name="meal_add_new_category">Category</string>
    <string name="meal_add_new_addition">Addition</string>
    <string name="title_activity_menu_restaurant_edit">Edit Meal</string>
    <string name="addition_meal_price">Price</string>
    <string name="addres_section_main_info">Main Info</string>
    <string name="addres_section_other_info">More Info</string>
    <string name="show_more"> (read all...)</string>
    <string name="addition_name">Addition name</string>
    <string name="new_data_insertion">Insert new data:</string>
    <string name="category_name">Category name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add restaurant</string>
    <string name="title_activity_restaurant_list">My Restaurants</string>
    <string name="title_activity_add_restaurant">Add Restaurant</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addres_section1">Info</string>
    <string name="addres_section2">Services</string>
    <string name="addres_section3">Extras</string>
    <string name="name">Name</string>
    <string name="address">Address: Street Number, City, Country</string>
    <string name="phone">Phone</string>
    <string name="category">Category</string>
    <string name="title_activity_restaurant_page">Restaurant_page</string>
    <string name="reserved_percentage">Reserved percentage</string>
    <string name="rating">Rating</string>
    <string name="number_reservations">Number reservation</string>
    <string name="table_section">Table</string>
    <string name="takeaway_section">Take Away</string>
    <string name="title_activity_reservation">Reservations</string>
    <string name="reservation_people">People</string>
    <string name="ordered_meals">Meal Ordered</string>
    <string name="reservation_title">Reservations</string>
    <string name="no_reservation">No Reservations</string>
    <string name="statistics_activity">Statistics</string>
    <string name="statistics_chart_title">Take Away reservations</string>
    <string name="statistics_booking_line">Table reservations</string>
    <string name="statistics_order_line">Take away reservations</string>
    <string name="statistics_Sun">Sun</string>
    <string name="statistics_Mon">Mon</string>
    <string name="statistics_Tue">Tue</string>
    <string name="statistics_Wed">Wed</string>
    <string name="statistics_Thu">Thu</string>
    <string name="statistics_Fri">Fri</string>
    <string name="statistics_Sat">Sat</string>
    <string name="statistics_Jan">Jan</string>
    <string name="statistics_Feb">Feb</string>
    <string name="statistics_Mar">Mar</string>
    <string name="statistics_Apr">Apr</string>
    <string name="statistics_May">May</string>
    <string name="statistics_Jun">Jun</string>
    <string name="statistics_Jul">Jul</string>
    <string name="statistics_Aug">Aug</string>
    <string name="statistics_Sep">Sep</string>
    <string name="statistics_Oct">Oct</string>
    <string name="statistics_Nov">Nov</string>
    <string name="statistics_Dec">Dec</string>
    <string name="statistics_filter_week">Weekly</string>
    <string name="statistics_filter_month">Monthly</string>
    <string name="statistics_filter_year">Yearly</string>
    <string name="reviews_activity">Reviews</string>
    <string name="title_add_offer">Add new Offer</string>
    <string name="title_activity_user_restaurant">UserRestaurantActivity</string>
    <string name="no_reviews">No Reviews</string>
    <string name="times_Mon">Monday</string>
    <string name="times_Tue">Tuesday</string>
    <string name="times_Wed">Wednesday</string>
    <string name="times_Thu">Thursday</string>
    <string name="times_Fri">Friday</string>
    <string name="times_Sat">Saturday</string>
    <string name="times_Sun">Sunday</string>
    <string name="close">close</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="extra">Extra Info</string>
    <string name="services">Services</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="animal_allowed">Animal allowed</string>
    <string name="air_conditioned">A/C</string>
    <string name="near">near</string>
    <string name="bus_stop">bus stop</string>
    <string name="metro_stop">metro stop</string>
    <string name="title_activity_user_restaurant_list">UserRestaurantList</string>
    <string name="filter">Filter the restaurant list</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_password">Password must be at least 6 characters long</string>
    <string name="err_msg_confirm_password">The two passwords must be the same</string>
    <string name="err_msg_first_name">Enter the first name</string>
    <string name="err_msg_last_name">Enter the last name</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_phone_number">Phone number (Optional)</string>
    <string name="registration">Registration</string>
    <string name="register_btn">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="delete">Delete</string>
    <string name="search_hint">start with # for tag search</string>
    <string name="facebook_app_id">988598407901956</string>
    <string name="distance">Distance</string>
    <string name="price_range">Price range</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="time">Time</string>
    <string name="open_filter">Open at:</string>
    <string name="menu">Menu</string>
    <string name="title_activity_add_review">Add a review</string>
    <string name="comment">Add a Comment</string>
    <string name="title_activity_gallery_view">Gallery</string>
    <string name="title_activity_my_reviews">MyReviewsActivity</string>
    <string name="make_an_order">Order now</string>
    <string name="make_a_reservation">Book Table</string>
    <string name="next">Next</string>
    <string name="action_my_restaurants">My Restaurants</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_user_part">User Part</string>
    <string name="title_activity_add_reviews">Add a review</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_reservations">My Reservations</string>
    <string name="my_favourites">My Favourites</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_phone_number">Telephone number</string>
    <string name="profile_vat_number">VAT Number</string>
    <string name="action_cancel">Cancel</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="offers">Offers</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_my_orders">My Orders</string>
    <string name="call_confirmation">Call confirmation</string>
    <string name="call_confirmation_message">Sure to call the restaurant?</string>
    <string name="calendar">Calendar</string>
    <string name="insert_date">Please, insert a date</string>
    <string name="insert_time">Please, insert time</string>
    <string name="invalid_or_incomplete_data">Data not valid or incomplete. Check again.</string>
    <string name="no_table_reservation_service">This restaurant does not allow to reserve tables.</string>
    <string name="notes">Notes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="reservationConfirmation">Confirm reservation</string>
    <string name="reservation_date">Choose a date</string>
    <string name="reservation_guests_number">Guests</string>
    <string name="reservation_time">Pick a time</string>
    <string name="reserve">Reserve</string>
    <string name="set_date_first">Set date first</string>
    <string name="set_time_first">Set time first</string>
    <string name="table_reservation_confirmation">Reservation confirmation</string>
    <string name="table_reservation_confirmation_message">Do you really want to book?</string>
    <string name="table_reservation_confirmation_message2">You booked successfully</string>
    <string name="user_order_cart_btn_confirm">Confirm</string>
    <string name="user_order_cart_btn_continue">Continue</string>
    <string name="user_order_cart_btn_cancel">Cancel</string>
    <string name="user_order_cart_hint_note">Additional order info</string>
</resources>