<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".owner.MainActivity">

    <item
        android:id="@+id/action_edit_cover"
        android:orderInCategory="100"
        android:title="@string/action_edit_cover"
        android:icon="@drawable/ic_edit_primary_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:title="@string/action_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reservations"
        android:orderInCategory="100"
        android:title="@string/action_reservations"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_offers"
        android:orderInCategory="100"
        android:title="@string/action_offers"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reviews"
        android:orderInCategory="100"
        android:title="@string/action_reviews"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:title="@string/action_statistics"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_confirm"
        android:orderInCategory="100"
        android:title="@string/action_confirm"
        android:visible="false"
        app:showAsAction="never" />

</menu>
