<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_owner"
            android:icon="@mipmap/ic_home"
            android:title="Owner Part" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/ic_login"
            android:title="Login" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@mipmap/ic_user_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_cart_black"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@drawable/ic_calendar_black_24dp"
            android:title="@string/my_reservations" />

        <item
            android:id="@+id/nav_my_reviews"
            android:icon="@drawable/ic_menu_24dp"
            android:title="@string/my_reviews" />

        <item
            android:id="@+id/nav_my_favourites"
            android:icon="@drawable/ic_star_on_24dp"
            android:title="@string/my_favourites" />

    </group>


</menu>
