<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.order.CartFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_meal_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_order_cart_hint_note"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ordernote" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_price"
        android:text="Euro 52.20"
        android:textSize="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_order_cart_btn_confirm"
        android:id="@+id/confirm_order" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_order_cart_btn_continue"
        android:id="@+id/continue_order" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_order_cart_btn_cancel"
        android:id="@+id/cancel_order" />

</LinearLayout>
